syntax = "proto3";

package productCategory;

import 'google/protobuf/any.proto';
import 'google/protobuf/struct.proto';

message ProductCategory {
  string id = 1;
  string productId = 2;
  string categoryId = 3;
}

message ProductCategories {
  repeated ProductCategory productCategories = 1;
}

message ProductCategoryInput {
  string productId = 1;
  string categoryId = 2;
}

message CreateProductCategoryInput {
  ProductCategoryInput data = 1;
}

message CreateManyProductCategoriesInput {
  repeated ProductCategoryInput ProductCategories = 1;
}

message UpdateProductCategoryInput {
  string id = 1;
  ProductCategoryInput data = 2;
}

message DeleteProductCategoryInput {
  ProductCategoryInput data = 2;
}

message UpdateManyProductCategoriesInput {
  google.protobuf.Any filter = 1;
  ProductCategoryInput update = 2;
}

message DeleteManyProductCategoriesInput {
  google.protobuf.Any filter = 1;
}

message NullableProductCategory {
  oneof kind {
    google.protobuf.NullValue null = 1;
    ProductCategory data = 2;
  }
}